# generalization

./: .dockerignore  .gitignore  .pre-commit-config.yaml  0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  Dockerfile  clip.py  completions.py  decimate.py  descriptions.csv  docker-compose.yml  download_mp.py  embeddings.pt  embeddings.py  environment.yml  excluded.csv  features.csv  gpt.csv  gpt.py  habitat.csv  interactive_play.py  model_ids.json  models.yml  my_habitat.py  my_pyglet.py  my_ray.py  objectnav_mp3d.yaml  pick.yaml  pyproject.toml  run.sh  ycb-auto.csv  ycb-gpt.csv  ycb.csv
dashboard/: deploy.sh  start.sh
dashboard/notebooks/: august10.jl  august13.jl  august6.jl  compare_gpt_sizes_breakout.jl  compare_num_embeddings_and_random_params.jl  compare_num_embeddings_and_random_params2.jl  correlate.jl  gpt_vs_a2c_baseline_4_atari_games.jl  gpt_vs_a2c_baseline_results.jl  pretrained_vs_randomized3.jl  stabilize_gpt.jl
linguistic-analysis/: main.py
rl/: agent.py  area_chart.py  babyai_agent.py  babyai_env.py  babyai_main.py  bar_chart.py  base_main.py  distributions.py  dummy_vec_env.py  embeddings.py  envs.py  evaluation.py  few_shot.py  fill_mask.py  gpt_agent.py  gpt_main.py  heatmap.py  instrs.py  logits.py  main.py  make_agent_demos.py  manual_control.py  mccrae_main.py  mcrae.py  multihead_attention.py  my_main.py  parse_ycb_pdf.py  ppo.py  pybullet_agent.py  pybullet_env.py  pybullet_main.py  render_trajectories.py  spec.py  testrender.py  thor.py  utils.py  vec_env.py  wrappers.py
rl/baby_ai/: agent.py  gpt_agent.py
rl/mccrae/: agent.py  env.py
rl/my/: agent.py  entities.py  env.py  main.py  mesh_ent.py  mesh_paths.py
supervised/: antonyms.py  antonyms_synonyms.py  between.py  broke.py  difference.py  mccrae.py  regress.py  spec.py
