[tool.poetry]
name = "generalization"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
stable-baselines3 = "^1.4.0"
gym-miniworld = {git = "https://github.com/GPT-RL/gym-miniworld.git"}
sweep-logger = {git = "https://github.com/run-tracker/sweep-logger.git", rev = "main"}
transformers = "^4.16.2"
typed-argument-parser = "^1.7.2"
ansicolors = "^1.1.8"
art = "^5.4"
Pillow = "^9.0.1"
torch = [
    {platform = 'darwin', url =  "https://download.pytorch.org/whl/cpu/torch-1.9.0-cp38-none-macosx_10_9_x86_64.whl"},
    {platform = 'linux', url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp38-cp38-linux_x86_64.whl"}
]

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^7.28.0"
black = "^21.9b0"
pre-commit = "^2.16.0"
pymeshlab = "^2021.10"
python-Levenshtein = "^0.12.2"
tabula-py = "^2.3.0"
openai = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
