[tool.poetry]
name = "generalization"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.5"
habitat = {git = "https://github.com/facebookresearch/habitat-lab.git", rev = "fbdd9fd42e7716c04bbde1da0d867e6d79dd3490"}
stable-baselines3 = "^1.4.0"
transformers = "^4.17.0"
typed-argument-parser = "^1.7.2"
ansicolors = "^1.1.8"
art = "^5.5"
sweep-logger = {git = "https://github.com/run-tracker/sweep-logger.git", rev = "main"}

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^8.1.1"
black = "^22.1.0"
openai = "^0.15.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
