[tool.poetry]
name = "generalization"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.5"
habitat = {git = "https://github.com/GPT-RL/habitat-lab.git", rev = "main"}
stable-baselines3 = {git = "https://github.com/GPT-RL/stable-baselines3.git", rev = "master"}
transformers = "^4.17.0"
typed-argument-parser = "^1.7.2"
ansicolors = "^1.1.8"
art = "^5.5"
sweep-logger = {git = "https://github.com/run-tracker/sweep-logger.git", rev = "main"}
torch = [
    {platform = 'darwin', url =  "https://download.pytorch.org/whl/cpu/torch-1.9.0-cp38-none-macosx_10_9_x86_64.whl"},
    {platform = 'linux', url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp38-cp38-linux_x86_64.whl"}
]

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^8.1.1"
black = "^22.1.0"
openai = "^0.15.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
